  on the document, either close or hide it (see the new preference
  option \\close_buffer_with_last_view)


The following LyX functions have been changed:
 
- LFUN_CLOSE_TAB_GROUP ("close-tab-group") was renamed to
  LFUN_TAB_GROUP_CLOSE ("tab-group-close").

- LFUN_SPIT_VIEW ("split-view") was renamed to
  LFUN_VIEW_SPLIT ("view-split").

- LFUN_BREAK_PARAGRAPH ("break-paragraph") was renamed to
  LFUN_PARAGRAPH_BREAK ("paragraph-break").


The following LyX key bindings have been changed:

- The binding "C-w" was moved from "buffer-close" to "view-close"
  (only in cua.bind).

- sciword.bind was changed significantly (see #8364). The most important
  change is that "math-delim" commands now work under Windows.


Changes with respect to external programs and libraries:
--------------------------------------------------------

- LyX now links against libmagic (http://www.darwinsys.com/file/) if it is
  available at compile time. This improves the file format detection of
  included graphics and other files. The old builtin format detection code
  is used if libmagic is not available.

- LyX no longer uses gettext for reading the translation files. This
  especially has an advantage on Windows, reducing the time it takes to 
  find the correct translation.


Known issues in version 2.1.0
-----------------------------

- LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix
  this properly, since simple sheebang conversion in *.py files will not
  be enough.


Caveats when upgrading from earlier versions to 2.1.x
-------------------------------------------------------

- In order to improve reported scrolling slowness, we changed the way
  screen painting is done. This, however, can slow down the performance
  on remote X connections and we provide the \\use_qimage preference 
  variable, which brings back the old way of painting (when set to false).
