@@ -182,6 +182,11 @@ The following LyX key bindings have been changed:
 - sciword.bind was changed significantly (see #8364). The most important
   change is that "math-delim" commands now work under Windows.
 
+The following LyX documents have been moved:
+
+- 'AEA', 'JASA', 'springer', and 'thesis' have been moved from templates
+  to examples (see #8643).
+
 
 Changes with respect to external programs and libraries:
 --------------------------------------------------------
